# Statix

./: README.md  statix.cabal
src/: Analyzer.hs  Main.hs  Scanner.hs  Types.hs
